--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,35 @@
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tarefas"
+        android:text="@string/tarefas"
         android:textColor="@color/black"
         android:textSize="24sp"/>
 
+    <include
+        android:id="@+id/include_empty"
+        layout="@layout/empty_estate" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@id/fab"
+        app:layout_constraintTop_toBottomOf="@id/Tv_tittle"
+        tools:itemCount="8"
+        tools:listitem="@layout/item_task"
+        tools:visibility="gone"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="20dp"
         app:srcCompat="@drawable/ic_add"
+        android:contentDescription="@string/nova_tarefa"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
